<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/personal_info_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/personal_info_textview"
        android:textSize="16dp"
        android:textColor="#355c7d"

        />


    <!-- First Name-->
    <EditText
        android:id="@+id/signup_input_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_personal_info_firstname"/>

    <!-- Last Name-->
    <EditText
        android:id="@+id/signup_input_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_personal_info_lastname"/>

    <!-- Phone Number-->
    <EditText
        android:id="@+id/signup_input_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_personal_info_phone_number"/>

    <!--Major - Searchable Spinner-->

</LinearLayout>