gbz<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/logo"/>
        <!-- UserName-->
        <EditText
            android:id="@+id/signup_input_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/hint_username"/>
        <!--Email-->
        <EditText
            android:id="@+id/signup_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"/>
        <!-- Password-->
        <EditText
            android:id="@+id/signup_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:hint="@string/hint_password"/>
        <!-- Password Re-enter-->
        <EditText
            android:id="@+id/signup_input_reEnterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:hint="@string/hint_password2nd"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">
            <!-- FirstName-->
            <EditText
                android:id="@+id/signup_input_firstname"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="First Name"/>
            <EditText
                android:id="@+id/signup_input_lastname"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:hint="Last Name"/>


        </LinearLayout>




    </LinearLayout>
</ScrollView>